# solid-rss-app

./: .gitignore  LICENSE  alembic.ini  package.json  pnpm-lock.yaml  pyproject.toml
app/: app.py  database.py  models.py  schema.py  setting.py
app/routers/: auth.py
app/routers/authorization/: router.py  schema.py  utils.py
src/: root.tsx
src/components/: Navbar.tsx  RssItemCell.tsx
src/routes/: index.tsx
src/routes/auth/: login.tsx
src/routes/authentication/: login.tsx  register.tsx
src/routes/faq/: index.tsx
src/routes/rss/: [uid].tsx
src/store/: account.ts  app.ts  rss.ts
src/utils/: router.ts
tests/: test_auth.py
